Fixed header styles & a right gutter & the services section's images that were out of alignment. Need to double check footer now.

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,36 +7,88 @@ header {
     width: 232px;
     float: right;
   }
-  h1 {
-    text-align: center;
-    clear: right;
-  }
-  h2 {
-    text-align: center;
-    clear: right;
-    font-style: italic;
-  }
-  .bullets {
-    display: flex;
-    justify-content: center;
-  }
-  .contact {
-    text-align: right;
-    span {
-      display: block;
+  .titles {
+    height: 245px;
+    .title1 {
+      font: normal normal normal 22px/1.41em "playfair display", serif;
+      font-size: 40px;
+      font-weight: bold;
+      margin: 0 0 14px 0;
+      text-align: center;
+      clear: right;
+    }
+    .title2 {
+      font: normal normal normal 15px/1.875em avenir-lt-w01_35-light1475496,
+        sans-serif;
+      text-align: center;
+      clear: right;
+      font-style: italic;
+      font-size: 28px;
+      line-height: 1.875em;
+      margin: 0;
     }
   }
+  .bottom-section {
+    height: 152px;
+    .bullets {
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      ul {
+        margin: 0;
+        li {
+          font: normal normal normal 18px/1.75em "playfair display", serif;
+          line-height: 1.3em;
+          font-family: avenir-lt-w01_35-light1475496, sans-serif;
+          font-size: 15px;
+          letter-spacing: 0.03em;
+          p {
+            margin: 0;
+          }
+        }
+        &:nth-of-type(1) {
+          margin-right: 60px;
+        }
+        &:nth-of-type(2) {
+          margin-left: 60px;
+          margin-right: 60px;
+        }
+        &:nth-of-type(3) {
+          margin-left: 60px;
+        }
+      }
+    }
+    .contact {
+      text-align: right;
+      font: normal normal normal 18px/1.75em "playfair display", serif;
+      p {
+        margin: 0;
+        span {
+          display: block;
+        }
+      }
+    }
 
-  nav {
-    display: flex;
-    justify-content: center;
-    ul {
-      list-style: none;
-      display: contents;
+    nav {
+      height: 30px;
+      text-align: center;
+      font: normal normal normal 14px/1.79em avenir-lt-w01_35-light1475496,
+        sans-serif;
+      ul {
+        list-style: none;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
 
-      a {
-        text-decoration: none;
-        color: black;
+        li {
+          height: 30px;
+          padding: 0 10px;
+          float: left;
+          a {
+            text-decoration: none;
+            color: black;
+          }
+        }
       }
     }
   }
@@ -102,12 +154,44 @@ header {
       display: flex;
       width: 100%;
       height: 380px;
-
-      img {
-        width: 480px;
-        height: 380px;
-        object-fit: cover;
-      }
+        .div1 {
+          width: 473px;
+          object-fit: cover;
+        }
+        .div2 {
+          width: 474px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .div3 {
+          width: 474px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        // &:nth-of-type(2) {
+        //   width: 474px;
+        //   img {
+        //     width: 100%;
+        //   }
+        // }
+        // &:nth-of-type(3) {
+        //   width: 474px;
+        //   img {
+        //     width: 100%;
+        //   }
+        // }
+        // img {
+        //   width: 474px;
+        //   height: 380px;
+        //   object-fit: cover;
+        //   &:nth-of-type(1) {
+        //     width: 473px;
+        //   }
+        // }
     }
 
     &:nth-of-type(2) {
